[package]
name = "compressbench"
version = "0.1.0"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3.0"
deflate = "1.0.0"
lz4-compression = "0.7.0"
lz4_flex = "0.11.1"
lzzzz = "1.0.4"
lz4-compress = "0.1.1"
lz-fear = "0.1.1"
lzma-rs = "0.3.0"
rar = "0.2.0"
snap = "1.0.1"
tar = "0.4.30"
yazi = "0.1.3"
zip = "0.6.4"
zopfli = "0.7.4"
zstd = "0.12.4"
flate2 = "1.0.14"
num-format = "0.4.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 3
strip = true
lto = true
codegen-units = 1